# key-whisper-network

./: .gitignore  Cargo.toml  README.md  index.html  install.sh  install_staging.sh  local_dev.sh  package-lock.json  package.json  push.sh  push_staging.sh  setup.sh  setup_staging.sh  simple-message-backend-staging.service  simple-message-backend.service  tailwind.config.ts  vite.config.ts  vitest.config.ts
backend/: Cargo.toml
backend/src/: main.rs
src/: App.tsx  index.css  sw.js
src/components/auth/: LoginForm.tsx  UserProfileModal.tsx
src/components/contact/: GroupProfile.tsx
src/components/contacts/: AddContactModal.tsx  AddGroupModal.tsx  CameraDeviceSelector.tsx  ContactProfile.tsx  ContactsList.tsx  GroupProfile.tsx  ImageCapture.tsx  QRCodeGenerator.tsx  QRCodeScanner.tsx
src/components/contacts/shared/: ContactImageUpload.tsx  ContactNameEdit.tsx  QRCodeActions.tsx
src/components/messages/: ChatInterface.tsx  ForwardMessageDialog.tsx  MessageBubble.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  popover.tsx  sheet.tsx  toast.tsx  toaster.tsx
src/contexts/: AuthContext.tsx  ContactsContext.tsx  MessagesContext.tsx
src/hooks/: use-toast.ts  useCamera.ts  useKeyExpiration.ts  useMessagePolling.ts
src/pages/: Index.tsx  NotFound.tsx
src/services/: apiService.ts  fileTransferService.ts  messageStorage.ts
src/utils/: appBadge.ts  bufferUtils.ts  encryption.ts  indexedDB.ts  notifications.ts  secureStorage.ts
