[package]
name = "simple-message-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] } # Enable macros feature
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fjall = "2.9"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
nonzero-ext = "0.3" # Required by tower-governor
thiserror = "1"
tower = "0.4" # Required for ServiceBuilder
tower-governor = { version = "0.4", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
