[package]
name = "simple-message-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] } # Enable macros feature
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fjall = "2.9"
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tower_governor = { version = "0.7", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
