[package]
name = "simple-message-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] } # Enable macros feature
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
fjall = "2.9"
futures = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower_governor = { version = "0.7", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
